feat: basic file tracking functionality is now working

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 RELEASE_MANAGER_USER=release_manager
 RELEASE_MANAGER_PASSWORD=release_manager
 RELEASE_MANAGER_PORT=7313
+DB_FILE_NAME=release_manager.sqlite
