--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-RELEASE_MANAGER_USER=release_manager
-RELEASE_MANAGER_PASSWORD=release_manager
 RELEASE_MANAGER_PORT=7313
 DB_FILE_NAME=release_manager.sqlite
+SCAN_DIR=/opt/test
